geobretagne/mreport#113 corretion init du sélecteur de modèle

--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -220,7 +220,7 @@
                           Modèle sélectionné
                         </label>
                         <select class="form-control" id="selectedModelComposer">
-                            <option disabled value selected>Modèle</option>
+                            <option value="" selected>Modèle</option>
                         </select>
                     </div>
               <!--</form>-->
