--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -217,10 +217,9 @@
                     <div class="form-group col-3">
                         <label for="selectedModelComposer">
                           <i class="fas fa-palette mreport-secondary-color-1"></i>
-                          Modèle sélectionné
+                          Modèle de rendu sélectionné
                         </label>
                         <select class="form-control" id="selectedModelComposer">
-                            <option value="" selected>Modèle</option>
                         </select>
                     </div>
               <!--</form>-->
@@ -653,7 +652,7 @@
                 </div>
                 <div class="modal-body">
                     <form>
-                        <div class="form-group">
+                        <div class="form-group" style="display:none;">
                             <label for="separation_input">Séparation</label>
                             <select class="form-control" id="separation_input" name="separation_input">
                                 <option value="0">Verticale</option>
