--- a/frontend/static/css/admin.css
+++ b/frontend/static/css/admin.css
@@ -6,14 +6,6 @@ body {
   height: 100%;
 }
 
-#composer, .builder.edit, .main, .composition, #report-composition {
-  min-height: 100%;
-}
-
-#composer-report-title{
-  margin:0;
-}
-
 .card {
   /*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
   border: unset;
@@ -143,12 +135,13 @@ h5>.badge {
 .modal[data-report-state="add"] .mreport-secondary-color-1-bg{
   display: inline-block;
 }
+/*
 .container-fluid {
   padding: 15px;
   padding-right: 0;
   padding-left: 0;
 }
-
+*/
 .card-body {
   padding: 1rem;
   width: 100%;
@@ -165,12 +158,12 @@ h5>.badge {
   padding-top: 15px;
   display:inline-block;
 }
-
+/*
 .row {
   margin-left: 0;
   margin-right: 0;
 }
-
+*/
 .sticky {
   z-index: 2;
   position: sticky;
@@ -761,15 +754,6 @@ width:100%;
 
 #home .images img{
   max-width: 100%;
-}
-
-.text-edit.btn{
-  padding:5px;
-  font-size:15px;
-  line-height:normal;
-  font-variant:all-small-caps;
-  font-style:normal;
-  margin-left:10px;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link{
