--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -193,88 +193,74 @@
     <!-- Reports start -->
 
     <!-- Composer start -->
-    <div class="container-fluid page" id="composer">
-        
+    <div id="composer" class="container-fluid page">
         <div class="builder edit">
-            <div class="row mreport-grey6-bg" id="ComposerOptionsSelectRow">
-              <!--<form class="form row" role="form" autocomplete="off">-->
+
+            <form class="form mreport-grey6-bg" id="ComposerOptionsSelectRow">
+                <div class="form-row">
                     <div class="form-group col-3">
                         <label for="selectedReportComposer">
-                          <i class="fas fa-file-alt mreport-secondary-color-1"></i>
-                          Rapport sélectionné
+                            <i class="fas fa-file-alt mreport-secondary-color-1"></i> 
+                            Rapport sélectionné
                         </label>
-                        <select class="form-control" id="selectedReportComposer">
-                        </select>
+                        <select class="form-control" id="selectedReportComposer"></select>
                     </div>
                     <div class="form-group col-3">
                         <label for="selectedReportVersionComposer">
-                          <i class="fas fa-history mreport-secondary-color-1"></i>
-                          Version sélectionné
+                            <i class="fas fa-history mreport-secondary-color-1"></i>
+                            Version sélectionnée
                         </label>
-                        <select class="form-control" id="selectedReportVersionComposer" disabled>
-                        </select>
+                        <select class="form-control" id="selectedReportVersionComposer" disabled></select>
                     </div>
                     <div class="form-group col-3">
                         <label for="selectedModelComposer">
-                          <i class="fas fa-palette mreport-secondary-color-1"></i>
-                          Modèle de rendu sélectionné
+                            <i class="fas fa-palette mreport-secondary-color-1"></i>
+                            Modèle de rendu sélectionné
                         </label>
                         <select class="form-control" id="selectedModelComposer">
+                            <option value="" disabled selected></option>
                         </select>
                     </div>
-              <!--</form>-->
-            <div class="col-3">
-              <button type="button" id="btn_save_report" class=" btn btn-block mreport-primary-color-1-bg">
-                <i class="fas fa-save"></i>
-                Enregistrer
-              </button>
-            </div>
-              
-            </div>
-            <div class="sidenav d-flex flex-column ">
-                <div class="sidenav-content">
-                <div >
-                  <!-- <h6>Affichage du bloc sans données:</h6>
+                    <div class="form-group col-3">
+                        <label>&nbsp;</label>
+                        <button type="button" id="btn_save_report" class="btn btn-block mreport-primary-color-1-bg">
+                            <i class="fas fa-save"></i>
+                            Enregistrer
+                        </button>
+                    </div>
+                </div>
+            </form>
+
+            <div class="sidenav d-flex flex-column">
+              <div class="sidenav-content">
+              <!--
+                <fieldset>
+                  <legend>Affichage du bloc sans données:</legend>
                   <div id="nodata-option">
                     <select class="form-control" id="#noDataOption">
                       <option value="0" selected>Affichage du message: "Absence de données"</option>
                       <option value="1" >Cacher tout le bloc</option>
-                  </select>
-                </div>  -->
-                  
-                </div>
-                <div>
-                  <h6>Blocs structurants</h6>
-                  <div class="rows list-group" id="structure-models">
-                      <!-- appended by code -->
-                      <div class="" id="element-models">
-                          <!-- appended by code -->
-                      </div>
+                    </select>
                   </div>
-                </div>
-                <div>
-                  <h6>Dataviz disponibles</h6>
-                  <div class="list-group" id="dataviz-items">
-                      <!-- appended by code -->
-                  </div>
-                </div>
-                </div>
+                </fieldset>
+              -->
+                <fieldset>
+                  <legend>Blocs structurants</legend>
+                  <ul class="list-group" id="structure-models"><!-- appended by code --></ul>
+                  <ul class="list-group" id="element-models"><!-- appended by code --></ul>
+                </fieldset>
+                <fieldset>
+                  <legend>Dataviz disponibles</legend>
+                  <ul class="list-group" id="dataviz-items"><!-- appended by code --></ul>
+                </fieldset>
+              </div>
             </div>
 
             <div class="main">
-                <div class="row">
-                <h2 class="col-9" id="composer-report-title">
-                    <!-- appended by code -->
-                </h2>
-                </div>
-                <div class="composition">
-
-                    <div id="report-composition"></div>
-
-                </div>
-
-
+              <h2 id="composer-report-title"></h2>
+              <ul id="report-composition" class="list-group"></ul>
             </div>
+
         </div>
     </div>
     <!-- Composer end -->
@@ -371,6 +357,7 @@
             </div>
         </div>
     </div>
+
     <!-- Modal Report-->
     <div class="modal fade" id="report-modal-form" tabindex="-1" role="dialog" aria-labelledby="reportModalLabel"
         aria-hidden="true">
@@ -640,8 +627,7 @@
     </div>
 
     <!-- Structure dividing modal -->
-    <div class="modal fade" id="divide_form" tabindex="-1" role="dialog" aria-labelledby="divideForm"
-        aria-hidden="true">
+    <div class="modal fade" id="divide_form" tabindex="-1" role="dialog" aria-labelledby="divideForm" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -652,32 +638,38 @@
                 </div>
                 <div class="modal-body">
                     <form>
-                        <div class="form-group" style="display:none;">
-                            <label for="separation_input">Séparation</label>
+                        <div class="form-group">
+                            <label for="separation_input">Séparation :</label>
                             <select class="form-control" id="separation_input" name="separation_input">
                                 <option value="0">Verticale</option>
                                 <option value="1">Horizontale</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="dimensions_division">Dimensions</label>
-                            <select type="text" class="form-control orientation_changed" id="dimensions_division">
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                            </select>
+                            <label for="dimensions_division">Dimensions :</label>
+                            <div class="form-check form-check-inline">
+                              <input class="form-check-input" type="radio" name="dimensions_division" id="dimRadio2" value="2" selected="selected">
+                              <label class="form-check-label" for="dimRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                              <input class="form-check-input" type="radio" name="dimensions_division" id="dimRadio3" value="3">
+                              <label class="form-check-label" for="dimRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                              <input class="form-check-input" type="radio" name="dimensions_division" id="dimRadio4" value="4">
+                              <label class="form-check-label" for="dimRadio4">4</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                              <input class="form-check-input" type="radio" name="dimensions_division" id="dimRadio5" value="5">
+                              <label class="form-check-label" for="dimRadio5">5</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                              <input class="form-check-input" type="radio" name="dimensions_division" id="dimRadio6" value="6">
+                              <label class="form-check-label" for="dimRadio6">6</label>
+                            </div>
                         </div>
                         <div class="form-group no-margin" id="columns-inputs">
                             <div class="row">
-                                <div class="col-4 horizontal-column">
-                                    <input type="text" class="form-control" value="6">
-                                </div>
-                                <div class="col-4 horizontal-column">
-                                    <input type="text" class="form-control" value="6">
-                                </div>
-
                             </div>
                             <small id="dimensions_help" class="form-text text-muted orientation_changed">Le total
                                 doit être 12</small>
