remise en place de la preview du wizard (sans iframe mais avec nettoyage des css inline à la fermeture de la modal)

--- a/frontend/static/css/composer.css
+++ b/frontend/static/css/composer.css
@@ -157,6 +157,10 @@
   color:#006878;
 }
 
+.builder i.fas {
+  width: 1em;
+}
+
 /* --------------------------------------------------------- Blocs de composition */
 
 .builder #report-composition .structure-bloc,
