--- a/frontend/static/css/composer.css
+++ b/frontend/static/css/composer.css
@@ -91,6 +91,7 @@
 }
 
 .builder .sidenav .list-group-item .bloc-tools,
+.builder .sidenav .list-group-item .cols-tools,
 .builder .sidenav .list-group-item .cell-tools,
 .builder .sidenav .list-group-item .data-tools,
 .builder .sidenav .list-group-item .text-edit,
@@ -185,6 +186,7 @@
   font-size: 12px;
 }
 
+.builder #report-composition .sortable-chosen .cols-tools,
 .builder #report-composition .sortable-chosen .cell-tools,
 .builder #report-composition .sortable-chosen .text-edit,
 .builder #report-composition .sortable-chosen .dataviz.list-group-item,
@@ -214,30 +216,59 @@
 }
 
 .builder #report-composition .list-group-item .bloc-tools,
-.builder #report-composition .splitable-grid  .cell-tools,
-.builder #report-composition .editable-text   .text-edit {
+.builder #report-composition .layout-cols   > .cols-tools,
+.builder #report-composition .layout-cell   > .cell-tools,
+.builder #report-composition .editable-text > .text-edit {
   filter: alpha(opacity=25);
   opacity: 0.25;
-  transition: 0.2s;
 }
 .builder #report-composition .list-group-item:hover .bloc-tools,
-.builder #report-composition .splitable-grid:hover  .cell-tools,
-.builder #report-composition .editable-text:hover   .text-edit {
+.builder #report-composition .layout-cols:hover   > .cols-tools,
+.builder #report-composition .layout-cell:hover   > .cell-tools,
+.builder #report-composition .editable-text:hover > .text-edit {
   filter: alpha(opacity=100);
   opacity: 1;
-  transition: 0.2s;
+  transition: 0.5s;
 }
 
-.builder #report-composition .splitable-grid {
+.builder #report-composition .list-group-item .bloc-tools button b,
+.builder #report-composition .layout-cols   > .cols-tools button b,
+.builder #report-composition .layout-cell   > .cell-tools button b {
+  display: none;
+}
+.builder #report-composition .list-group-item:hover .bloc-tools button b,
+.builder #report-composition .layout-cols:hover   > .cols-tools button b,
+.builder #report-composition .layout-cell:hover   > .cell-tools button b {
+  display: inline;
+}
+
+.builder #report-composition .layout-cols {
+  border: 2px solid transparent;
+}
+.builder #report-composition .layout-cols:hover {
+  border: 2px dotted #fc0;
+  background-color: #ffcc0010;
+}
+
+.builder #report-composition .layout-cols {
+  position: relative;
+}
+.builder #report-composition .layout-cols > .cols-tools {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 20;
+}
+.builder #report-composition .layout-cell {
   position: relative;
   padding-top: 10px;
   padding-bottom: 10px;
 }
-.builder #report-composition .splitable-grid .cell-tools {
+.builder #report-composition .layout-cell > .cell-tools {
   position: absolute;
   top: 0px;
   right: 0px;
-  z-index: 5;
+  z-index: 20;
 }
 
 .builder #report-composition .editable-text {
@@ -257,7 +288,7 @@
 
 .builder #report-composition .dataviz-container {
   border: 1px solid #bbb;
-  min-height: 8.5rem;
+  min-height: 6.5rem;
   height: 100%;
   font-size: 1rem;
   padding: 10px;
@@ -265,9 +296,9 @@
 .builder #report-composition .dataviz-container:empty:after {
   content: "glisser-déposer\Aune donnée ici";
   white-space: pre-wrap;
-  margin-top: 1rem;
-  font-size: 2rem;
-  line-height: 2.5rem;
+  margin-top: 0.5rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
   text-align: center;
   color: #bbb;
 }
@@ -407,16 +438,6 @@
 .notdvz i {
     display: flex;
     align-items: center;
-}
-
-#divide_form .form-group,
-#divide_form small{
-    margin-left: 15px;
-    margin-right: 15px;
-}
-#divide_form .no-margin{
-    margin-left: 0;
-    margin-right: 0;
 }
 
 .report-chart-title{
