--- a/frontend/static/css/composer.css
+++ b/frontend/static/css/composer.css
@@ -186,19 +186,28 @@
   font-size: 12px;
 }
 
-.builder #report-composition .sortable-chosen .cols-tools,
-.builder #report-composition .sortable-chosen .cell-tools,
-.builder #report-composition .sortable-chosen .text-edit,
-.builder #report-composition .sortable-chosen .dataviz.list-group-item,
-.builder #report-composition .sortable-chosen .dataviz-container:empty:after {
+.builder #report-composition > li.sortable-chosen .layout-rows {
+  margin-top: 0;
+}
+.builder #report-composition > li.sortable-chosen .cols-tools,
+.builder #report-composition > li.sortable-chosen .cell-tools,
+.builder #report-composition > li.sortable-chosen .text-edit,
+.builder #report-composition > li.sortable-chosen .dataviz.list-group-item,
+.builder #report-composition > li.sortable-chosen .dataviz-container:empty:after,
+.builder #report-composition > li.sortable-chosen:hover .cols-tools,
+.builder #report-composition > li.sortable-chosen:hover .cell-tools,
+.builder #report-composition > li.sortable-chosen:hover .text-edit,
+.builder #report-composition > li.sortable-chosen:hover .dataviz.list-group-item,
+.builder #report-composition > li.sortable-chosen:hover .dataviz-container:empty:after {
   display: none;
 }
+
 /*.builder #report-composition .sortable-chosen .layout-cell,*/
-.builder #report-composition .sortable-chosen .dataviz-container {
+.builder #report-composition > li.sortable-chosen .dataviz-container {
   min-height: 2em;
   background: #ccc;
 }
-.builder #report-composition .sortable-chosen {
+.builder #report-composition > li.sortable-chosen {
   background-color: transparent;
 }
 .builder #report-composition .sortable-drag {
@@ -213,6 +222,21 @@
   font-size: 0.75rem;
   line-height: 1rem;
   padding: 0.2rem 0.4rem;
+}
+
+.builder #report-composition .bloc-content:hover .layout-rows {
+  margin-top: 1.5rem;
+}
+
+.builder #report-composition > li .cols-tools,
+.builder #report-composition > li .cell-tools,
+.builder #report-composition > li .text-edit {
+  display: none;
+}
+.builder #report-composition > li:hover .cols-tools,
+.builder #report-composition > li:hover .cell-tools,
+.builder #report-composition > li:hover .text-edit {
+  display: flex;
 }
 
 .builder #report-composition .list-group-item .bloc-tools,
@@ -231,14 +255,16 @@
   transition: 0.5s;
 }
 
-.builder #report-composition .list-group-item .bloc-tools button b,
-.builder #report-composition .layout-cols   > .cols-tools button b,
-.builder #report-composition .layout-cell   > .cell-tools button b {
+.builder #report-composition .list-group-item .bloc-tools b,
+.builder #report-composition .layout-cols   > .cols-tools b,
+.builder #report-composition .layout-cell   > .cell-tools b,
+.builder #report-composition .editable-text > .text-edit  b {
   display: none;
 }
-.builder #report-composition .list-group-item:hover .bloc-tools button b,
-.builder #report-composition .layout-cols:hover   > .cols-tools button b,
-.builder #report-composition .layout-cell:hover   > .cell-tools button b {
+.builder #report-composition .list-group-item:hover .bloc-tools b,
+.builder #report-composition .layout-cols:hover   > .cols-tools b,
+.builder #report-composition .layout-cell:hover   > .cell-tools b,
+.builder #report-composition .editable-text:hover > .text-edit  b{
   display: inline;
 }
 
@@ -246,7 +272,7 @@
   border: 2px solid transparent;
 }
 .builder #report-composition .layout-cols:hover {
-  border: 2px dotted #fc0;
+  border: 2px dotted #ffcc00;
   background-color: #ffcc0010;
 }
 
@@ -255,8 +281,8 @@
 }
 .builder #report-composition .layout-cols > .cols-tools {
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: -2px;
+  left: -2px;
   z-index: 20;
 }
 .builder #report-composition .layout-cell {
@@ -272,16 +298,14 @@
 }
 
 .builder #report-composition .editable-text {
-  border: 1px dotted #eee;
+  border: 1px dotted #ffffff;
 }
 .builder #report-composition .editable-text:hover {
-  border: 1px dashed #999;
+  border: 1px dashed #ffcc00;
 }
 .builder #report-composition .editable-text .btn.text-edit {
   float: left;
-}
-.builder #report-composition .editable-text .btn.text-edit b {
-  display: none;
+  margin: -1px 0.5em 0 -1px;
 }
 
 /* --------------------------------------------------------- Dataviz containers */
