--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -638,9 +638,8 @@
                 </div>
                 <div class="modal-body">
                     <form>
-                        <div class="form-row" id="grid-columns-size">
-                        </div>
-                        <small id="dimensions_help" class="form-text text-muted orientation_changed">Le total doit être 12</small>
+                        <div class="form-row" id="grid-columns-size"></div>
+                        <small id="dimensions_help" class="form-text text-muted orientation_changed">Le total des largeurs doit être égal à 12</small>
                     </form>
                 </div>
                 <div class="modal-footer btn-toolbar justify-content-between">
@@ -648,8 +647,8 @@
                             <button type="button" class="btn btn-danger" id="grid-delete-cols">Supprimer cette rangée de colonnes du bloc</button>
                         </div>
                         <div class="btn-group" role="group">
-                            <button type="button" class="btn mreport-primary-color-2-bg" data-dismiss="modal">Fermer</button>
-                            <button type="button" class="text-save btn mreport-primary-color-1-bg" id="grid-validate">Valider</button>
+                            <button type="button" class="btn mreport-primary-color-2-bg" data-dismiss="modal"><i class="fas fa-times-circle"></i> Fermer</button>
+                            <button type="button" class="text-save btn mreport-primary-color-1-bg" id="grid-validate"><i class="fas fa-check"></i> Valider</button>
                         </div>
                 </div>
             </div>
