Début de mise en place de l'export JSON du composer pour sauvegarde en DB

--- a/frontend/static/css/composer.css
+++ b/frontend/static/css/composer.css
@@ -341,6 +341,7 @@
 
 .builder #report-composition .dataviz.configured .data-tools .btn.edit {
   background-color: #28a745;
+  color: #ffffff;
 }
 
 .builder #report-composition .dataviz .dataviz-description {
