--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -217,16 +217,21 @@
                             <i class="fas fa-palette mreport-secondary-color-1"></i>
                             Modèle de rendu sélectionné
                         </label>
-                        <select class="form-control" id="selectedModelComposer">
-                            <option value="" disabled selected></option>
-                        </select>
+                        <select class="form-control" id="selectedModelComposer"></select>
                     </div>
                     <div class="form-group col-3">
-                        <label>&nbsp;</label>
-                        <button type="button" id="btn_save_report" class="btn btn-block mreport-primary-color-1-bg">
-                            <i class="fas fa-save"></i>
-                            Enregistrer
-                        </button>
+                        <label>
+                            <i class="fas fa-save mreport-secondary-color-1"></i>
+                            Validation de la composition
+                        </label>
+                        <div class="btn-group" style="display:flex;">
+                          <button type="button" id="save_report_json" class="btn mreport-primary-color-1-bg">
+                            <i class="fas fa-cloud-upload-alt"></i> Enregistrer
+                          </button>
+                          <button type="button" id="save_report_html" class="btn mreport-primary-color-2-bg">
+                            <i class="fas fa-file-export"></i> Générer
+                          </button>
+                        </div>
                     </div>
                 </div>
             </form>
