--- a/frontend/static/css/composer.css
+++ b/frontend/static/css/composer.css
@@ -331,18 +331,17 @@
   background-color: #BFE4EA;
   color: #006878;
 }
+
 .builder #report-composition .dataviz-container .dataviz .data-tools {
   position: absolute;
   bottom: 0;
   right: 0;
   z-index: 50;
 }
-
 .builder #report-composition .dataviz-container .dataviz .data-tools .btn.drag,
 .builder #report-composition .dataviz-container .dataviz .data-tools .btn b {
   display: none;
 }
-
 .builder #report-composition .dataviz-container .dataviz.configured .data-tools .btn.edit {
   background-color: #28a745;
   color: #ffffff;
@@ -401,36 +400,21 @@
 
 /* --------------------------------------------------------- Special title block */
 
-.builder #report-composition .report-bloc-title {
-  padding: 15px;
-}
-
-.builder #report-composition .report-bloc-title .dataviz-container {
+.builder #report-composition .dataviz-container.dvz-title {
   min-height: 5rem;
   flex-direction: row;
   justify-content: space-between;
   border: 5px ridge #bbb;
 }
-.builder #report-composition .report-bloc-title .dataviz-container:empty:after {
+.builder #report-composition .dataviz-container.dvz-title:empty:after {
   white-space: normal;
   line-height: 2rem;
   margin-top: 0.5rem;
   width: 100%;
 }
-.builder #report-composition .report-bloc-title .dataviz.list-group-item {
-  flex-grow: 1;
-}
 
-.builder #report-composition .report-bloc-title .data-tools {
-  display: none;
-}
-.builder #report-composition .report-bloc-title .dataviz-description i.fas {
-  display: inline;
-  padding: 0;
-  margin: 0;
-  margin-right: 1rem;
-  font-size: 2rem;
-  vertical-align: middle;
+.builder #report-composition .dataviz-container.dvz-title .dataviz {
+  flex-grow: 1;
 }
 
 /* --------------------------------------------------------- */
