--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -252,6 +252,9 @@
                 <fieldset>
                   <legend>Blocs structurants</legend>
                   <ul class="list-group" id="structure-models"><!-- appended by code --></ul>
+                </fieldset>
+                <fieldset>
+                  <legend>Blocs élémentaires</legend>
                   <ul class="list-group" id="element-models"><!-- appended by code --></ul>
                 </fieldset>
                 <fieldset>
