Composer: réorganisation du code pour générer les contenus d'un rapport existant (load JSON)

--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -228,9 +228,9 @@
                           <button type="button" id="save_report_json" class="btn mreport-primary-color-1-bg">
                             <i class="fas fa-cloud-upload-alt"></i> Enregistrer
                           </button>
-                          <button type="button" id="save_report_html" class="btn mreport-primary-color-2-bg">
+                          <!--button type="button" id="save_report_html" class="btn mreport-primary-color-2-bg">
                             <i class="fas fa-file-export"></i> Générer
-                          </button>
+                          </button-->
                         </div>
                     </div>
                 </div>
